// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LandingSection > renders basic case correctly 1`] = `
"<div class="py-24 sm:py-32">
  <div class="mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl gap-16 sm:gap-y-24 flex flex-col"></div>
</div>"
`;

exports[`LandingSection > renders with props features correctly 1`] = `
"<div class="py-24 sm:py-32">
  <div class="mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl gap-16 sm:gap-y-24 flex flex-col">
    <div class="text-center flex flex-col items-center">
      <div class="flex mb-6"><span class="i-heroicons-map w-10 h-10 flex-shrink-0 text-primary"></span></div>
      <h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white sm:text-4xl lg:text-5xl">Title</h2>
      <p class="mt-6 text-lg/8 text-gray-600 dark:text-gray-300">Description</p>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <dl class="mt-6 leading-7 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 lg:gap-x-8 lg:gap-y-16">
      <div class="relative pl-8">
        <dt class="font-semibold text-gray-900 dark:text-white"><span class="i-heroicons-wrench-screwdriver absolute left-0 top-1 h-5 w-5 text-primary" aria-hidden="true"></span><span>Fully customizable</span></dt>
        <dd class="text-gray-500 dark:text-gray-400 leading-6">Like Nuxt UI, change the style of any component from your App Config or customize them specifically through the ui prop.</dd>
      </div>
      <div class="relative pl-8">
        <dt class="font-semibold text-gray-900 dark:text-white"><span class="i-heroicons-square-3-stack-3d absolute left-0 top-1 h-5 w-5 text-primary" aria-hidden="true"></span><span>Slots for everything</span></dt>
        <dd class="text-gray-500 dark:text-gray-400 leading-6">Each component leverages the power of Vue's slots to give you the flexibility to build anything.</dd>
      </div>
    </dl>
    <!--v-if-->
  </div>
</div>"
`;

exports[`LandingSection > renders with props links correctly 1`] = `
"<div class="py-24 sm:py-32">
  <div class="mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl gap-16 sm:gap-y-24 flex flex-col">
    <div class="text-center flex flex-col items-center">
      <div class="flex mb-6"><span class="i-heroicons-map w-10 h-10 flex-shrink-0 text-primary"></span></div>
      <h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white sm:text-4xl lg:text-5xl">Title</h2>
      <p class="mt-6 text-lg/8 text-gray-600 dark:text-gray-300">Description</p>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
    <div class="mt-8 flex flex-wrap gap-x-3 gap-y-1.5 !mt-0 justify-center"><button type="button" class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-2.5 px-3.5 py-2.5 shadow-sm ring-1 ring-inset ring-gray-300 dark:ring-gray-700 text-gray-700 dark:text-gray-200 bg-gray-50 hover:bg-gray-100 disabled:bg-gray-50 dark:bg-gray-800 dark:hover:bg-gray-700/50 dark:disabled:bg-gray-800 focus-visible:ring-2 focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center">
        <!--v-if--><span class="">Explore components</span><span class="i-heroicons-arrow-right flex-shrink-0 h-5 w-5" aria-hidden="true"></span>
      </button></div>
  </div>
</div>"
`;

exports[`LandingSection > renders with slots correctly 1`] = `
"<div class="py-24 sm:py-32">Top slot<div class="mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl gap-16 sm:gap-y-24 flex flex-col">
    <div class="text-center flex flex-col items-center">
      <div class="mb-2 text-base/7 font-semibold text-primary">Headline slot</div>
      <h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white sm:text-4xl lg:text-5xl">Title slot</h2>
      <p class="mt-6 text-lg/8 text-gray-600 dark:text-gray-300">Description slot</p>
      <!--v-if-->
      <!--v-if-->
    </div>Default slot
    <!--v-if-->
    <div class="mt-8 flex flex-wrap gap-x-3 gap-y-1.5 !mt-0 justify-center">Links slot</div>
  </div>Bottom slot</div>"
`;
